--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/menu.css">
     <link rel="stylesheet" href="/static/layui/css/layui.css">
     <link rel="stylesheet" href="/static/css/myblog.css">
+    <link rel="stylesheet" href="/static/css/myblog-mobile.css">
     <link rel="stylesheet" href="/static/css/iconfont.css">
     <style>
         [v-cloak] {
@@ -32,7 +33,7 @@
                     <ul class="layui-nav" lay-filter="">
                         <li class="layui-nav-item"><a href="/" style="color: grey;">首页</a></li>
                     </ul>
-                    <ul class="layui-nav layui-layout-right" style="background-color: white; margin-top: 10px;">
+                    <ul class="layui-nav layui-layout-right my-top" style="background-color: white; margin-top: 10px;">
                         <li>
                             <!-- <div class="layui-form-item">
                                 <div class="layui-input-block"> -->
@@ -61,7 +62,7 @@
                     </li>
                 </ul>
             </div>
-            <div class='div-inline div-left' style="margin-left: 60px;">
+            <div class='div-inline div-left my-blog-container'>
                 <header>
                     <div class="container">
                         <div style="margin-top: 10px;">
