--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -76,7 +76,7 @@
                         <span style="float: right;color: grey;" id="update_time">---------------发表于</span>
                     </div>
                 </header>
-                <section style="background-color: white;margin-bottom: 20px;">
+                <section style="background-color: white;margin-bottom: 20px;" class="blog-detail">
                     <div class="container">
                         <div class="docs-content markdown markdown-body editormd-preview-container" id="result">
                             <!-- 此处插入内容 -->
