--- a/myBlogWeb/static/css/myblog-mobile.css
+++ b/myBlogWeb/static/css/myblog-mobile.css
@@ -149,16 +149,19 @@
     }
     
     .my-blog .content-meta-list{
-        margin-top: 5px;
-        margin-left: 40%;
+        margin-left: 30%;
     }
     .my-blog .no-more{
-        margin-left: 40%;
+        margin-left: 30%;
         margin-right: auto;
         color: grey;
     }
 
     .my-blog .blog-detail{
         margin-top: 10px;
+    }
+
+    .my-blog .back-top{
+        display: none;
     }
   }
