--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -35,7 +35,7 @@
     /* border:2px solid ; */
     border-radius:10px;
     display: inline;
-    padding: 5px 10px 5px 10px;;
+    padding: 5px 10px 5px 10px;
 }
 
 .my-tag .tag-active {
@@ -76,7 +76,7 @@
 }
 
 .my-blog .my-blog-aside{
-    width: 250px;
+    width: 320px;
     margin-left: 20px;
     background-color: white;
     /* margin-left: 720px; */
@@ -170,11 +170,34 @@
 }
 
 .my-blog .content-meta-list{
-    margin-left: 70%;
+    margin-left: 60%;
+    margin-bottom: 10px;
 }
 
 .my-blog .no-more{
     margin-left: 40%;
     margin-right: 40%;
     color: grey;
+}
+
+.my-blog .show-more{
+    text-align: center;
+}
+
+.my-blog .show-more button{
+    background-color: ghostwhite;
+    color: grey;
+    border-radius:10px;
+    padding: 5px 10px 5px 10px;;
+}
+
+.my-blog .back-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    position: fixed;
+    right: 2rem;
+    bottom: 130px;
+    z-index: 1000;
 }
