--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -24,7 +24,7 @@
         <div id="my-blog-top">
             <nav style="border-bottom: 1px solid #f1f1f1;" id='my-blog-head'>
                 <div class="container">
-                    <a href="" style="background: white;">
+                    <a href="/" style="background: white;">
                         <img src="/show/logo/zndex_logo.png" alt="">
                         <!-- <h1 style="color: #007fff;">ZNDEX-Blog</h1> -->
                     </a>
@@ -38,7 +38,7 @@
                                 <!-- <div class="layui-form-item">
                                 <div class="layui-input-block"> -->
                                 <input type="text" name="search" placeholder="搜索ZNDEX" autocomplete="off"
-                                    class="layui-input">
+                                    class="layui-input" v-model="search" @keyup.enter="changeSearch()">
                                 <!-- </div>
                             </div> -->
                             </li>
@@ -57,6 +57,16 @@
                     </ul>
                 </div>
             </div>
+            <!-- <div style="background-color: white;" id="my-category">
+                <div class="my-header meta-row" style="width: 70%;">
+                    <ul style="background-color: white;" class="meta-list">
+                        <li :class="getCategoryClass('')"><a @click="changeNowCategory('')"
+                                href="javascript:void(0)">全部</a></li>
+                        <li v-for="item in categories"><a href="javascript:void(0)"
+                                @click="changeNowCategory(item)">{[item]}</a></li>
+                    </ul>
+                </div>
+            </div> -->
             <div v-show="now_category != ''" class="my-tag" id="my-tag">
                 <ul>
                     <li>
@@ -99,9 +109,10 @@
                                                 <i class="iconfont icon-item" title="浏览"
                                                     style="font-size: 16px;">&#xe8bf;{[item.read_count]}</i>
                                             </li>
-                                            <!-- <li>
-                                                <i class="iconfont icon-item" title="点赞">&#xe8ad;{[item.like_count]}</i>
-                                            </li> -->
+                                            <li>
+                                                <i class="iconfont icon-item" title="点赞"
+                                                    style="font-size: 16px;">&#xe8ad;{[item.like_count]}</i>
+                                            </li>
                                             <li>
                                                 <i class="iconfont icon-item" title="评论"
                                                     style="font-size: 16px;">&#xe8b4;{[item.comment_count]}</i>
@@ -117,11 +128,11 @@
                         <div v-show="showLoading">
                             等待中
                         </div>
-                        <div v-show="more">
+                        <div v-show="more" class="show-more">
                             <button @click="getBlogList()">点击加载更多</button>
                         </div>
                         <div v-show="!more" class="no-more">
-                            没有更多了
+                            没有更多了QAQ
                         </div>
                     </div>
                 </section>
@@ -129,12 +140,18 @@
             <div class='div-inline div-right'>
                 <section class='my-blog-aside' id="menu-right" :class="getBarFixedClass()">
                     <div class="container">
-                        此处为侧边栏
-                        <div>
-                            点击此处回到顶部
+                        <div style="width:100%; margin-right: 10px">
+                            <img src="https://qiniu.cuiqingcai.com/wp-content/uploads/2019/04/601554968669_.pic_hd.jpg" alt="" style="width: 90%;">
+                        </div>
+                        <div style="width:100%; margin-right: 10px;margin-top: 10px;">
+                            <img src="https://qiniu.cuiqingcai.com/wp-content/uploads/2019/06/4681561704146_.pic_hd.jpg" alt="" style="width: 90%;">
                         </div>
                     </div>
                 </section>
+            </div>
+            <div class="back-top" v-show="showBackTop">
+                <a href="javascript:scroll(0,0)" @click="showBackTop=false"><i class="iconfont icon-item" title="返回顶部"
+                    style="font-size: 20px;">&#xe6a5;</i></a>
             </div>
         </div>
         <section class="vibrant centered">
@@ -150,14 +167,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
     <script src="/static/js/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="/static/js/prettify/prettify.js"></script> -->
     <script src="/static/js/vue.js"></script>
-    <script src="/static/layui/layui.js"></script>
-    <script>
-        layui.use('element', function () {
-            var element = layui.element;
-        })
-    </script>
+    <script src="/static/layui/lay/modules/layer.js"></script>
     <script src="/static/js/index.js"></script>
 </body>
 
