--- a/myBlogCMS/templates/model_layui.html
+++ b/myBlogCMS/templates/model_layui.html
@@ -61,7 +61,7 @@
                                     @click="addUrl('参考文档', '/show/logo/welcome_myBlog_CMS.png')">参考文档</a></dd>
                         </dl>
                     </li>
-                    <li class="layui-nav-item">
+                    <li class="layui-nav-item layui-nav-itemed">
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-edit icon_style"></i>编辑</a>
                         <dl class="layui-nav-child">
                             <dd class="main_left" :class="getLayuiThisClass('提交博客')"><a data-src="/blog_edit/"
@@ -70,7 +70,7 @@
                             </dd>
                         </dl>
                     </li>
-                    <li class="layui-nav-item">
+                    <li class="layui-nav-item layui-nav-itemed">
                         <a class="" href="javascript:;"><i class="layui-icon layui-icon-app icon_style"></i>管理</a>
                         <dl class="layui-nav-child">
                             <dd class="main_left" :class="getLayuiThisClass('博客列表')"><a data-src="/blog_list/"
