--- a/myBlogWeb/templates/blog_detail.html
+++ b/myBlogWeb/templates/blog_detail.html
@@ -92,7 +92,7 @@
             <div class='div-inline div-right'>
                 <div class="container">
                     <ul class="my_menu" id="menu-left">
-                        <li style="margin-bottom: 10px;"><strong>目录</strong></li>
+                        <li style="margin-bottom: 10px;"><a href="#title"><strong>目录</strong></a></li>
                     </ul>
                 </div>
             </div>
