--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -57,7 +57,7 @@
                 </div>
             </nav>
         </div> -->
-        <my-blog-head isLogin="isLogin" search="search"></my-blog-head>
+        <my-blog-head :is-login="isLogin" :search="search" :user_message="user_message"></my-blog-head>
             <div style="background-color: white;" id="my-category">
                 <div class="layui-header my-header" style="width: 70%;">
                     <ul class="layui-nav" lay-filter="" style="background-color: white;">
@@ -180,6 +180,7 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/vue.js"></script>
     <script src="/static/layui/lay/modules/layer.js"></script>
+    <script src="/static/js/cookie.js"></script>
     <script src="/static/js/components.js"></script>
     <script src="/static/js/index.js"></script>
 </body>
