--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -22,42 +22,7 @@
 <body>
     <div id="app" style="background-color: #f4f5f5;" v-cloak>
         <div id="my-blog-top">
-            <!-- <div>
-            <nav style="border-bottom: 1px solid #f1f1f1;" id='my-blog-head'>
-                <div class="container">
-                    <a href="/" style="background: white;">
-                        <img src="/show/logo/zndex_logo.png" alt="">
-                    </a>
-                    <div id="menu">
-                        <ul style="background-color: white;">
-                            <li><a href="/" style="color: grey; font-size: 16px;">首页</a></li>
-                        </ul>
-                        <ul class="my-top">
-                            <li>
-                                <input type="text" name="search" placeholder="搜索ZNDEX" autocomplete="off" v-model="search" @keyup.enter="changeSearch()">
-                            </li>
-                            <li v-show="!isLogin">
-                                <a href="javascript:void(0)" style="margin-left: 5px;">
-                                    登陆
-                                </a>
-                            </li>
-                            <li v-show="!isLogin">
-                                <a href="javascript:void(0)">
-                                    注册
-                                </a>
-                            </li>
-                            <li v-show="isLogin">
-                                <a href="">
-                                    <img src="http://task.zndex.com/show/logouser/zndex" alt="" class="user-picture">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <a id="menu-toggle" href="javascript:void(0)" class=" ">&#9776;</a>
-                </div>
-            </nav>
-        </div> -->
-        <my-blog-head :is-login="isLogin" :search="search" :user_message="user_message"></my-blog-head>
+        <my-blog-head :is-login="login" :search="search" :user-message="user_message"></my-blog-head>
             <div style="background-color: white;" id="my-category">
                 <div class="layui-header my-header" style="width: 70%;">
                     <ul class="layui-nav" lay-filter="" style="background-color: white;">
@@ -180,9 +145,7 @@
     <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/vue.js"></script>
     <script src="/static/layui/lay/modules/layer.js"></script>
-    <script src="/static/js/cookie.js"></script>
-    <script src="/static/js/components.js"></script>
-    <script src="/static/js/index.js"></script>
+    <script src="/static/js/index_new.js"></script>
 </body>
 
 </html>
