--- a/myBlogWeb/static/css/myblog.css
+++ b/myBlogWeb/static/css/myblog.css
@@ -1,4 +1,9 @@
-
+.anchor{
+    display: block;
+    height: 70px; /*和顶部fix的高度一致*/
+    margin-top: -70px; /*和顶部fix的高度一致*/
+    visibility: hidden;
+}
 
 .my-header {
     background-color: white;
@@ -44,6 +49,7 @@
 }
 
 .my-top .user-menu .user-nickname{
+    margin-left: 5px;
     float: right;
     line-height: 38px;
 }
@@ -253,4 +259,33 @@
     right: 2rem;
     bottom: 130px;
     z-index: 1000;
+}
+
+.my-blog .my-comment{
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.my-blog #comment-title{
+    text-align: center;
+    margin-bottom: 10px;
+    color: #8a9aa9;
+}
+
+.my-blog .comment-block{
+    background-color: ghostwhite;
+    height: 50px;
+}
+
+.my-blog .comment-user-head{
+    float: left;
+    display: inline-block;
+    line-height: 45px;
+}
+
+.my-blog .comment-input{
+    margin-left: 10px;
+    padding-top: 10px;
+    display: inline-block;
+    float: left;
 }
