--- a/myBlogWeb/templates/index.html
+++ b/myBlogWeb/templates/index.html
@@ -126,7 +126,7 @@
                 </section>
             </div>
             <div class="back-top" v-show="showBackTop">
-                <a href="javascript:scroll(0,0)" @click="showBackTop=false"><i class="iconfont icon-item" title="返回顶部"
+                <a href="#my-blog-top" @click="showBackTop=false" class="label"><i class="iconfont icon-item" title="返回顶部"
                     style="font-size: 20px;">&#xe6a5;</i></a>
             </div>
         </div>
